--- a/views/users/newuser.jade
+++ b/views/users/newuser.jade
@@ -3,7 +3,7 @@ extends ../layout
 block content
   .container
     h1.page-header 회원가입
-    form(action='/users', method='POST')
+    form(action='/users/make', method='POST')
       .form-group
         label(for='name') Name
         input.form-control(type='text', id='name', name='name', placeholder='Your name')
