--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -8,3 +8,5 @@ block content
       li 이름: #{user.name}
       li 이메일: #{user.email}
       li 피부 상태:
+    
+    a.btn.btn-primary(href='/survey') 피부 타입조사 
