--- a/views/posts/index.jade
+++ b/views/posts/index.jade
@@ -2,18 +2,43 @@ extends ../layout
 
 block content
   h1 게시판
-  
+  | total #{pagination.numPosts} posts
   table.table
     tr
       th 제목
       th 댓글
+      th 조회수
       th 작성일
     each post in posts
       tr
         td
           a(href='/postcomment/#{post.id}')= post.title
         td= post.numComment
+        th= post.read
         td= moment(post.createdAt).format('YYYY/MM/DD')
-
-
   a.btn.btn-primary(href='/posts/new') 글작성
+  
+  nav.center
+    ul.pagination
+      li(class=pagination.firstPage.cls): a(href=pagination.firstPage.url)
+        span(aria-hidden="true") &laquo;
+      li(class=pagination.prevPage.cls): a(href=pagination.prevPage.url)
+        span(aria-hidden="true") &lt;
+      each page in pagination.pages
+        li(class=page.cls)
+          a(href=page.url): span= page.text
+      li(class=pagination.nextPage.cls): a(href=pagination.nextPage.url)
+        span(aria-hidden="true") &gt;
+      li(class=pagination.lastPage.cls): a(href=pagination.lastPage.url)
+        span(aria-hidden="true") &raquo;
+
+  form#deleteForm(style='display:none', method="POST")
+          
+    script(type='text/javascript').
+      $(".delete").click(function(e) {
+        var id = $(e.currentTarget).data('id');
+        if (confirm('정말 삭제하시겠습니까?')) {
+          $("#deleteForm").attr('action', "/posts/" + id + "?_method=DELETE").submit();          
+        }
+        return false;
+      });
