--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -3,7 +3,7 @@ extends ../layout
 block content
   .container
     h1.page-header 회원 정보
-          
+    img.img-circle(src='/images/건성.jpg')      
     ul
       li 이름: #{user.name}
       li 이메일: #{user.email}
