--- a/views/usercontent.jade
+++ b/views/usercontent.jade
@@ -13,7 +13,7 @@
         li
           a(href='/list') 내가등록한 화장품
         li
-          a(href='/posts/start') 게시판
+          a(href='/posts/start') 자유 게시판  
       ul.nav.navbar-nav.navbar-right
         if (!currentUser) 
           li
