--- a/views/ingredient/cos.jade
+++ b/views/ingredient/cos.jade
@@ -2,4 +2,22 @@ extends ../layout
 
 block content
   .container
-    h1 성분검사화면이얌!
+  
+
+    script(type='text/javascript').
+      if (foo) {
+         bar(1 + 5)
+      }
+      
+      body
+    h1 Jade - node template engine
+    #container.col
+      if youAreUsingJade
+        p You are amazing
+      else
+        p Get on it!
+      p.
+        Jade is a terse and simple
+        templating language with a
+        strong focus on performance
+        and powerful features.
