--- a/views/ingredient/cos.jade
+++ b/views/ingredient/cos.jade
@@ -3,21 +3,15 @@ extends ../layout
 block content
   .container
   
-
-    script(type='text/javascript').
-      if (foo) {
-         bar(1 + 5)
-      }
+  body
+    #container
+      .select
+        label(for="audioSource") Audio source: 
+        select#audioSource
+      .select
+        label(for="videoSource") Video source: 
+        select#videoSource
+      video(muted="", autoplay="")
+      script(type='text/javascript', src='/javascripts/video_script.js')
       
-      body
-    h1 Jade - node template engine
-    #container.col
-      if youAreUsingJade
-        p You are amazing
-      else
-        p Get on it!
-      p.
-        Jade is a terse and simple
-        templating language with a
-        strong focus on performance
-        and powerful features.
+      p This demo requires Chrome 30 or later.
